force-app/main/default/objects/Case/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <description>Used to integrate cases with system accounts.</description>
    <externalId>true</externalId>
    <inlineHelpText>Used to integrate cases with system accounts.</inlineHelpText>
    <label>Account_External_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>