force-app/main/default/objects/Case/fields/EstimatedClosedDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedClosedDate__c</fullName>
    <label>EstimatedClosedDate</label>
    <type>Date</type>
</CustomField>