force-app/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>SLAViolation__c</fullName>
    <label>SLAViolation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Open Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>