force-app/main/default/objects/Case/fields/Solved_By__c.field-meta.xml
<CustomField>
    <fullName>Solved_By__c</fullName>
    <label>Solved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knowledge Portal</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Call center Agent</fullName>
            </value>
            <value>
                <fullName>Onsite Agent</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>